--- a/考研倒计时.html
+++ b/考研倒计时.html
@@ -26,7 +26,7 @@
             document.getElementById("t_h").innerHTML = h + " 时";
             document.getElementById("t_m").innerHTML = m + " 分";
             document.getElementById("t_s").innerHTML = s + " 秒";
-            var EndTime1= new Date("2020/06/13 00:00:00"); //截止时间
+            var EndTime1= new Date("2020/09/19 00:00:00"); //截止时间
             var t1 =EndTime1.getTime() - NowTime.getTime();
             var d1=Math.floor(t1/1000/60/60/24);
             var h1=Math.floor(t1/1000/60/60%24);
@@ -67,7 +67,7 @@
                 </DIV></h1>
                 
 				<h1>2020年上半年全国大学英语四、六级倒计时</h1>
-				<h3>2020年上半年全国大学英语四、六级考试时间：2020年06月13日 星期六 农历闰四月廿二</h3>
+				<h3>2020年上半年全国大学英语四、六级考试时间：2020年09月19日 星期六 农历闰八月初三</h3>
 				<h3>目前距离2020年大学英语四、六级考试还有</h3>
 				<h1><DIV id="CountMsg" class="HotDate">
 					<span id="t1_d">00 天</span>
